feat: add favs controller
